# node-pilot

./: .gitignore  README.md
agent/: CMakeLists.txt  config.json
agent/include/: Agent.hpp  Application.hpp  MetricsCollector.hpp
agent/include/config/: Config.hpp  ConfigLoader.hpp
agent/include/logging/: LogLevel.hpp  Logger.hpp
agent/include/network/: TCPClient.hpp
agent/include/protocol/: JsonSerializer.hpp  MessageType.hpp  MetricsMessage.hpp
agent/include/transport/: ConsoleTransport.hpp  ITransport.hpp  TCPTransport.hpp  TСPTransport.hpp
agent/src/: Agent.cpp  Application.cpp  MetricsCollector.cpp  main.cpp
agent/src/config/: ConfigLoader.cpp
agent/src/logging/: Logger.cpp
agent/src/network/: TCPClient.cpp
agent/src/protocol/: JsonSerializer.cpp
agent/src/transport/: ConsoleTransport.cpp  TCPTransport.cpp
docs/architecture/: adr-001.md  rfc-001.md
scripts/: tcp_server.py
